# tcg-price-lookup

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  LICENSE  NOTICE  README.md  main.py  pyproject.toml  tcg.toml.example
decks/: sample_deck.txt
prices/: sample_deck.tsv
scripts/: README.md  _clipboard.py  _config.py  fetch.py  fetch_deck.py  refresh_product_lines.py  smoke_test.py
sheets/: README.md
sheets/apps-script/: Table.gs  UI.gs  View.gs  main.gs
tcg/: README.md  __init__.py  _fingerprint.py  client.py  clipboard.py  config.py  deck.py  decklist.py  endpoints.py  models.py  output.py  product_lines.py  storage.py
tests/: test_client.py  test_clipboard.py  test_config.py  test_deck.py  test_decklist.py  test_endpoints.py  test_fetch_deck_output_flag.py  test_fingerprint.py  test_list_endpoints_cli.py  test_models.py  test_output.py  test_output_destinations.py  test_product_lines.py  test_public_api.py  test_refresh_product_lines.py  test_sample_deck.py  test_scripts_clipboard.py  test_scripts_config.py  test_show_config_cli.py  test_show_endpoints_cli.py  test_storage.py  test_tcg_toml_example.py  test_tty_rendering.py
tests/fixtures/: autocomplete_alice_golde.json
