[project]
name = "tcg"
version = "0.1.0"
description = "TCGplayer price scraper for Grand Archive and other TCG card pools"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Isongzhe" }]
dependencies = [
    "curl-cffi>=0.15.0",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/Isongzhe/tcg-price-lookup"
Repository = "https://github.com/Isongzhe/tcg-price-lookup"
Issues = "https://github.com/Isongzhe/tcg-price-lookup/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tcg"]

[tool.hatch.build.targets.sdist]
include = ["tcg", "README.md", "LICENSE", "NOTICE", "DISCLAIMER.md"]

[project.optional-dependencies]
# Historical snapshot features (appending runs to Parquet and querying them
# with DuckDB). Preview / experimental — the CLI does not currently expose
# a user-facing command for querying history, so most users should not
# need this. Install with:  uv sync --extra history
history = [
    "polars>=1.0.0",
    "duckdb>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
