[project]
name = "tcg"
version = "1.0.0"
description = "TCGplayer price scraper for Grand Archive and other TCG card pools"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Isongzhe" }]
dependencies = [
    "curl-cffi>=0.15.0",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/Isongzhe/tcg-price-lookup"
Repository = "https://github.com/Isongzhe/tcg-price-lookup"
Issues = "https://github.com/Isongzhe/tcg-price-lookup/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tcg"]

[tool.hatch.build.targets.sdist]
include = ["tcg", "README.md", "LICENSE", "NOTICE", "DISCLAIMER.md"]

[project.optional-dependencies]
# Historical snapshot features (appending runs to Parquet and querying them
# with DuckDB). Preview / experimental — the CLI does not currently expose
# a user-facing command for querying history, so most users should not
# need this. Install with:  uv sync --extra history
history = [
    "polars>=1.0.0",
    "duckdb>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "dist", ".pytest_cache", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",   # line length is the formatter's job
    "RUF002", # docstring × symbol is intentional math notation; Stage C will revise docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B011",   # do-not-assert-False is over-eager in tests
    "E402",   # mid-file imports are intentional: section markers + importorskip guards
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
